--- a/littleGame/game.html
+++ b/littleGame/game.html
@@ -7,14 +7,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+        <script src="jquery-3.3.1.js"></script>
         <script src="javaScript.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
 
         <title>PLAY IS LEARNING</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <center><h1 class="link">Click Click Click</h1></center>
-        <center><a id="start" class="push_button blue" href="#">Let's Go</a></center>
-        <div class="loading"></div>
+        <center><a id="start" class="push_button blue" onclick="startClick()" href="#">Let's Go</a></center>
+        <div class="loading" onclick="clickOnImage()"></div>
         <div align="center">
           <div class="link">Your Score: <span id="mymark">3</span></div>
         </div>
